--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/flStart"
         android:layout_width="match_parent"
-        android:layout_height="220dp" />
+        android:layout_height="220dp"
+        android:contentDescription="@string/image"
+        android:src="@drawable/img_main_page"/>
     
     <FrameLayout
         android:id="@+id/flStart"
@@ -22,8 +24,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:contentDescription="@string/image"
-        android:src="">
+        android:background="@drawable/item_color_accent_border_ripple_background"
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,9 +34,7 @@
             android:layout_gravity="center"
             android:textColor="@color/colorPrimary"
             android:textSize="22sp"
-            android:textStyle="bold"
-
-            />
+            android:textStyle="bold" />
 
     </FrameLayout>
 
